--- a/scss/sections/_navbar.scss
+++ b/scss/sections/_navbar.scss
@@ -1,4 +1,14 @@
 @use '../custom' as *;
+@use '../components/mixins' as *;
+
 .menu {
-    background: linear-gradient(to right, rgba($primary, 0.95), rgba($secondary, 0.95));
+    @include gradient;
+    li {
+        padding: 0 0.7rem;
+        a {
+            color: $white;
+            text-transform: capitalize;
+            font-weight: 600;
+        }
+    }
 }
