modified rounded btn in button file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11846,7 +11846,7 @@ textarea.form-control-lg {
 }
 .btn-rounded {
   position: relative;
-  padding: 0.9375rem 1.2rem;
+  padding: 0.9375rem 4.375rem 0.9375rem 1.25rem;
   font-weight: 500;
   margin: 0;
   border: 0.1rem solid rgba(255, 255, 255, 0.6);
@@ -11859,6 +11859,7 @@ textarea.form-control-lg {
   top: 50%;
   right: 5px;
   transform: translateY(-50%);
+  border-radius: 50%;
 }
 
 .menu {
