--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -2,7 +2,7 @@
 
 .btn-rounded {
     position: relative;
-    padding: 0.9375rem 1.2rem;
+    padding: 0.9375rem 4.375rem 0.9375rem 1.25rem;
     font-weight: 500;
     margin: 0;
     border: 0.1rem solid rgba($white, 0.6);
@@ -15,5 +15,6 @@
         top: 50%;
         right: 5px;
         transform: translateY(-50%);
+        border-radius: 50%;
     }
 }
