--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11846,10 +11846,11 @@ textarea.form-control-lg {
 }
 .btn-rounded {
   position: relative;
-  padding: 0.9375rem 4.375rem 0.9375rem 1.25rem;
-  font-weight: 500;
+  padding: 0.8375rem 4.375rem 0.8375rem 1.25rem;
+  font-weight: 700;
   margin: 0;
   border: 0.1rem solid rgba(255, 255, 255, 0.6);
+  background-color: #fff;
 }
 .btn-rounded span {
   position: absolute;
@@ -11860,6 +11861,16 @@ textarea.form-control-lg {
   right: 5px;
   transform: translateY(-50%);
   border-radius: 50%;
+}
+.btn-rounded span i {
+  color: #fff;
+  font-size: 2rem;
+  line-height: 2rem;
+  padding: 0.25rem 0.375rem;
+}
+.btn-rounded:hover {
+  background: linear-gradient(to right, rgba(153, 38, 240, 0.95), rgba(209, 34, 227, 0.95));
+  color: #fff;
 }
 
 .menu {
