--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -17,6 +17,8 @@ $gray-800: #343a40;
 $gray-900: #212529;
 $black:    #000;
 // scss-docs-end gray-color-variables
+$whatsup-number: #1ae000;
+$whatsup-icon: #119600;
 
 $primary:       $purple-dark;
 $secondary:     $pink;
@@ -32,3 +34,13 @@ $accordion-button-active-icon:  url("data:image/svg+xml,<svg xmlns='http://www.w
 
 // import bootstrap 5
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
+
+//  OPTION 2:
+// IMPORT IMPORT ONLY THE PART OF BOOTSTRAP YOU WANT TO USE
+// @import "../node_modules/bootstrap/scss/functions";
+// @import "../node_modules/bootstrap/scss/variables";
+// @import "../node_modules/bootstrap/scss/mixins";
+
+// Include any optional Bootstrap components as you like
+// @import "../node_modules/bootstrap/scss/root";
+// @import "../node_modules/bootstrap/scss/reboot";
