--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11844,6 +11844,39 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+.btn-rounded-whatup {
+  position: relative;
+  padding: 0.8375rem 4.375rem 0.8375rem 1.25rem;
+  font-weight: 700;
+  margin: 0;
+  border: 0.1rem solid rgba(255, 255, 255, 0.6);
+  background-color: #fff;
+  display: block;
+}
+.btn-rounded-whatup span {
+  position: absolute;
+  background-color: #9926f0;
+  width: 2.5rem;
+  height: 2.5rem;
+  top: 50%;
+  right: 5px;
+  transform: translateY(-50%);
+  border-radius: 50%;
+}
+.btn-rounded-whatup span i {
+  color: #fff;
+  font-size: 2rem;
+  line-height: 2rem;
+  padding: 0.25rem 0.375rem;
+}
+.btn-rounded-whatup:hover {
+  background: linear-gradient(to right, rgba(153, 38, 240, 0.95), rgba(209, 34, 227, 0.95));
+  color: #1ae000;
+}
+.btn-rounded-whatup:hover span {
+  background-color: #119600;
+}
+
 .btn-rounded {
   position: relative;
   padding: 0.8375rem 4.375rem 0.8375rem 1.25rem;
@@ -11851,6 +11884,7 @@ textarea.form-control-lg {
   margin: 0;
   border: 0.1rem solid rgba(255, 255, 255, 0.6);
   background-color: #fff;
+  color: #000;
 }
 .btn-rounded span {
   position: absolute;
@@ -11872,6 +11906,26 @@ textarea.form-control-lg {
   background: linear-gradient(to right, rgba(153, 38, 240, 0.95), rgba(209, 34, 227, 0.95));
   color: #fff;
 }
+.btn-rounded:hover span {
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.intro-section .display-2 {
+  margin-bottom: 1rem;
+  text-transform: capitalize;
+  font-family: "Poppins", sans-serif;
+}
+.intro-section .display-2--intro {
+  display: inline-block;
+  font-weight: 700;
+  font-family: "Poppins", sans-serif;
+}
+.intro-section .display-2--description {
+  font-size: 1.2rem;
+  display: block;
+  margin-top: 1.2rem;
+  text-transform: none;
+}
 
 .menu {
   background: linear-gradient(to right, rgba(153, 38, 240, 0.95), rgba(209, 34, 227, 0.95));
@@ -11883,6 +11937,13 @@ textarea.form-control-lg {
   color: #fff;
   text-transform: capitalize;
   font-weight: 600;
+}
+
+.intro-section {
+  background: linear-gradient(to right, rgba(153, 38, 240, 0.95), rgba(209, 34, 227, 0.95));
+  padding: 10rem 0 0 0;
+  width: 100%;
+  height: 100%;
 }
 
 /*# sourceMappingURL=style.css.map */
