--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11931,10 +11931,16 @@ textarea.form-control-lg {
   font-family: "Poppins", sans-serif;
 }
 .intro-section .display-2--description {
-  font-size: 1.2rem;
+  font-size: 1rem;
   display: block;
   margin-top: 1.2rem;
   text-transform: none;
+}
+@media (min-width: 992px) {
+  .intro-section .display-2--description {
+    font-size: 1.4rem;
+    display: inline-block;
+  }
 }
 
 .menu {
