--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -12,9 +12,14 @@
     }
     
     &--description {
-        font-size: 1.2rem;
+        font-size: 1rem;
         display: block;
         margin-top: 1.2rem;
         text-transform: none;
+
+        @include media-breakpoint-up(lg) {
+            font-size: 1.4rem;
+            display: inline-block;
+        }
     }
 }
