--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -42,3 +42,29 @@
     margin-bottom: 1rem;
     background-color: $primary;
 }
+// display 3
+.display-3 {
+    font-family: "Poppins", sans-serif;
+    
+    &--title {
+        font-size: 1.2rem;
+        text-transform: capitalize;
+        font-weight: 600;
+        font-family: "Poppins", sans-serif;
+        display: inline-block;
+        background-image: linear-gradient(to right, $primary, $secondary);
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+
+        @include media-breakpoint-up(lg) {
+            margin-top: 1.8rem;
+        }
+    }
+}
+
+// border right
+.border-right {
+    border-right: 0.1rem solid $gray-300;
+    height: 100%;
+}
