--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -24,6 +24,8 @@ $primary:       $purple-dark;
 $secondary:     $pink;
 
 // accordion override
+$accordion-padding-y:                     1.5rem;
+$accordion-padding-x:                     1.5rem;
 $accordion-icon-color:                    $primary;
 $accordion-icon-active-color:             $secondary;
 
