--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12131,4 +12131,51 @@ textarea.form-control-lg {
   text-transform: capitalize;
 }
 
+section.portfolio {
+  padding: 4rem 0;
+}
+section.portfolio button {
+  text-transform: capitalize;
+}
+section.portfolio .portfolio-box {
+  position: relative;
+  width: 100%;
+  height: 18.5rem;
+  overflow: hidden;
+  margin-bottom: 1.2rem;
+  border-top: 0.5rem solid #bb6ef5;
+}
+section.portfolio .portfolio-box img {
+  width: 100%;
+  height: 100%;
+}
+section.portfolio .portfolio-box .portfolio-info {
+  background-color: rgba(153, 38, 240, 0.75);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  visibility: hidden;
+}
+section.portfolio .portfolio-box .portfolio-info .caption {
+  text-align: center;
+  color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+section.portfolio .portfolio-box .portfolio-info .caption h4 {
+  text-transform: uppercase;
+  display: block;
+}
+section.portfolio .portfolio-box:hover .portfolio-info {
+  opacity: 1;
+  visibility: visible;
+  transition-duration: 1000ms;
+  transition-property: all;
+}
+
 /*# sourceMappingURL=style.css.map */
