--- a/scss/components/_mixins.scss
+++ b/scss/components/_mixins.scss
@@ -12,3 +12,9 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+// Transition Property
+@mixin transitionProperty {
+    transition-duration: 1000ms;
+    transition-property: all;
+}
