--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11988,6 +11988,10 @@ textarea.form-control-lg {
   height: 100%;
 }
 
+.gradient {
+  background: linear-gradient(to right, rgba(153, 38, 240, 0.95), rgba(209, 34, 227, 0.95));
+}
+
 .menu {
   background: linear-gradient(to right, rgba(153, 38, 240, 0.95), rgba(209, 34, 227, 0.95));
 }
@@ -12140,14 +12144,13 @@ section.portfolio button {
 section.portfolio .portfolio-box {
   position: relative;
   width: 100%;
-  height: 18.5rem;
+  max-height: 18.5rem;
   overflow: hidden;
   margin-bottom: 1.2rem;
   border-top: 0.5rem solid #bb6ef5;
 }
 section.portfolio .portfolio-box img {
   width: 100%;
-  height: 100%;
 }
 section.portfolio .portfolio-box .portfolio-info {
   background-color: rgba(153, 38, 240, 0.75);
@@ -12171,11 +12174,62 @@ section.portfolio .portfolio-box .portfolio-info .caption h4 {
   text-transform: uppercase;
   display: block;
 }
+section.portfolio .portfolio-box:hover img {
+  transform: scale(1.5);
+  transition-duration: 1000ms;
+  transition-property: all;
+}
 section.portfolio .portfolio-box:hover .portfolio-info {
   opacity: 1;
   visibility: visible;
   transition-duration: 1000ms;
   transition-property: all;
+}
+
+.get-started {
+  padding: 4rem 0;
+  background-color: #e9ecef;
+}
+.get-started .cta-info {
+  padding: 3rem;
+  margin: 1rem 0;
+}
+.get-started .cta-info__list {
+  position: relative;
+  list-style-type: none;
+  display: block;
+  padding-top: 0.5rem;
+  padding-left: 0.5rem;
+  margin-bottom: 0.7rem;
+}
+.get-started .cta-info__list li::before {
+  font-family: "Font Awesome 6 Free";
+  content: "\f00c";
+  font-weight: 600;
+  margin-right: 0.5rem;
+  font-size: 1.2rem;
+}
+.get-started button::after {
+  font-family: "Font Awesome 6 Free";
+  content: " \f1d8";
+  font-weight: 600;
+}
+.get-started .form {
+  padding: 3rem;
+}
+.get-started .form botton {
+  border: none;
+  color: #fff;
+}
+.get-started .form botton a {
+  color: #fff;
+  text-decoration: none;
+  text-transform: capitalize;
+}
+
+.footer {
+  padding-top: 1rem;
+  background-color: #151414;
 }
 
 /*# sourceMappingURL=style.css.map */
