--- a/scss/sections/_portfolio.scss
+++ b/scss/sections/_portfolio.scss
@@ -11,14 +11,14 @@ section.portfolio {
     .portfolio-box {
         position: relative;
         width: 100%;
-        height: 18.5rem;
+        max-height: 18.5rem;
         overflow: hidden;
         margin-bottom: 1.2rem;
         border-top: 0.5rem solid $purple-light;
 
         img {
             width: 100%;
-            height: 100%;
+            // height: 100%;
         }
 
         .portfolio-info {
@@ -43,6 +43,10 @@ section.portfolio {
             }
         }
         &:hover {
+            img {
+                transform: scale(1.5);
+                @include transitionProperty;
+            }
             .portfolio-info {
                 opacity: 1;
                 visibility: visible;
