--- a/scss/sections/_footer.scss
+++ b/scss/sections/_footer.scss
@@ -5,3 +5,42 @@
     padding-top: 1rem;
     background-color: $footer;
 }
+
+// style the contact-box content
+.contact-box {
+    position: relative;
+
+    &__icon {
+        width: 2rem;
+        stroke: $primary;
+        
+        @include media-breakpoint-up(sm) {
+            width: 4rem;
+        }
+    }
+
+    &__info {
+        padding: 0.4rem;
+        font-weight: 600;
+
+        &--title {
+            color: $white;
+            text-decoration: none;
+            font-size: 1rem;
+            
+            @include media-breakpoint-up(sm) {
+                font-size: 1.4rem;
+            }
+        }
+        
+        &--subtitle {
+            font-size: 0.9rem;
+            color: $gray-600;
+            text-decoration: none;
+
+            @include media-breakpoint-up(sm) {
+                font-size: 1rem;
+            }
+        }
+    }
+}
