--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12238,6 +12238,7 @@ section.portfolio .portfolio-box:hover .portfolio-info {
 .contact-box__icon {
   width: 2rem;
   stroke: #9926f0;
+  padding-top: 0.5rem;
 }
 @media (min-width: 576px) {
   .contact-box__icon {
@@ -12255,11 +12256,11 @@ section.portfolio .portfolio-box:hover .portfolio-info {
 }
 @media (min-width: 576px) {
   .contact-box__info--title {
-    font-size: 1.4rem;
+    font-size: 1rem;
   }
 }
 .contact-box__info--subtitle {
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   color: #6c757d;
   text-decoration: none;
 }
@@ -12267,6 +12268,70 @@ section.portfolio .portfolio-box:hover .portfolio-info {
   .contact-box__info--subtitle {
     font-size: 1rem;
   }
+}
+
+.footer-sm a {
+  color: #fff;
+}
+.footer-sm a i {
+  font-size: 1rem;
+  margin-left: 1rem;
+}
+@media (min-width: 576px) {
+  .footer-sm a i {
+    font-size: 1.6rem;
+  }
+}
+
+.company-list {
+  display: block;
+  list-style-type: none;
+  position: relative;
+}
+.company-list li {
+  margin-bottom: 0.5rem;
+  text-decoration: none;
+}
+.company-list li a {
+  color: #fff;
+  text-decoration: none;
+}
+.company-list li a:hover {
+  color: #9926f0;
+}
+
+.footer-bottom {
+  background-color: #000;
+}
+.footer-bottom__copyright {
+  color: #6c757d;
+  font-weight: 400;
+}
+.footer-bottom__copyright a {
+  color: #dee2e6;
+  text-decoration: none;
+}
+.footer-bottom__copyright a:hover {
+  color: #9926f0;
+  text-decoration: underline;
+}
+
+a.back-to-top {
+  position: fixed;
+  width: 3rem;
+  height: 3rem;
+  right: 1.875rem;
+  bottom: 1.875rem;
+  background-color: #9926f0;
+  z-index: 99999;
+}
+a.back-to-top i {
+  color: #fff;
+  font-size: 1rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 /*# sourceMappingURL=style.css.map */
